                             Change Log
-----------------------------------------------------------------------------

Below is the change log for typical users. Minor and older changes stripped
away, please see git history for details.

- v0.5.4 (2025-xx-xx) add ACES & Reinhard tonemapping
                      add exposure, contrast, brightness, & saturation controls
- v0.5.3 (2025-08-01) fix pl_ds.h hm32 reset (v1.0.1)
                      fix several internal issues with the metal backend
                      add debug names to vulkan pipelines
                      add double support for vulkan backend
                      add support for multiple vertex buffers (v1.2.0)
                      add dds extension
                      add dxt extension (v1.0.0)
                      update stb_image_resize2 from v2.13 to v2.14
                      rework & improve shader variant system
- v0.5.2 (2025-07-09) fix missing sampler functions in graphics ext (v1.1.3)
                      add mesh builder API to mesh ext (v0.1.0)
                      add starter ext MSAA & depth issues (v1.0.2)
                      fix macos examples build process
                      fix erroneous pl_json.h asserts (v1.0.2)
- v0.5.1 (2025-06-23) add directory ops to FILE ext (v1.1.0)
                      fix string interning cleanup issue (v1.0.1)
                      add "bHotReloadActive" to IO context (v1.1.0)
                      add "-hr" for hot reloads to cmd line args
- v0.5.0 (2025-06-17) new datatime extension (v1.0.0)
                      new compression extension (v1.0.0)
                      new pak file extension (v1.0.0)
                      new virtual file system extension (v1.0.0)
                      add vfs support to config ext (v1.1.0)
                      add vfs support to draw ext (v1.2.0)
                      add vfs support to model loader ext (v0.2.1)
                      add vfs support to renderer ext (v0.2.1)