@@ -7,6 +7,7 @@ away, please see git history for details.
 
 - v0.5.4 (2025-xx-xx) add ACES & Reinhard tonemapping
                       add exposure, contrast, brightness, & saturation controls
+                      fix long standing shadow mapping viewport technique issue
 - v0.5.3 (2025-08-01) fix pl_ds.h hm32 reset (v1.0.1)
                       fix several internal issues with the metal backend
                       add debug names to vulkan pipelines
